--- a/DeviceLockController/res/values-pt-rPT/strings.xml
+++ b/DeviceLockController/res/values-pt-rPT/strings.xml
@@ -31,9 +31,9 @@
     <string name="try_again" msgid="5964839819170927721">"Tentar novamente"</string>
     <string name="reset_phone" msgid="1161657350311160627">"Repor telemóvel"</string>
     <string name="control_section_title" msgid="2213476068991045785">"O que é que a app <xliff:g id="CREDITOR_APP">%1$s</xliff:g> consegue fazer?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"Restrinja este dispositivo se não fizer um pagamento"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"Transfira, instale e atualize a app <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"Desative as funcionalidades de depuração"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"Restringir este dispositivo se não fizer um pagamento"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"Transferir, instalar e atualizar a app <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"Desativar funcionalidades de depuração"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"O que irá funcionar se este dispositivo for bloqueado?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"Serviços de chamadas de emergência"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Chamadas recebidas e algumas chamadas feitas"</string>
@@ -46,11 +46,11 @@
     <string name="open_source_licenses" msgid="6464389386262455443">"Licenças de código aberto"</string>
     <string name="footer_notice" msgid="7606898520964750584">"As outras capacidades de gestão em "<b>"Definições &gt; Segurança &gt; Informações do dispositivo gerido"</b>" não se aplicam a este dispositivo"</string>
     <string name="footer_notice_content_description" msgid="2160540400079419440">"As capacidades de gestão na secção de dispositivos financiados das Definições de segurança não se aplicam a este dispositivo."</string>
-    <string name="device_provided_by_provider" msgid="290593329676291991">"Este dispositivo foi fornecido pelo fornecedor <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>."</string>
+    <string name="device_provided_by_provider" msgid="290593329676291991">"Este dispositivo foi fornecido pelo fornecedor <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="download_kiosk_app" msgid="1845089944897502656">"A app de quiosque vai ser transferida e instalada automaticamente"</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"A app de quiosque vai ser instalada para este utilizador"</string>
     <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"O fornecedor <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> pode restringir este dispositivo se falhar um pagamento"</string>
-    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"O fornecedor <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> pode restringir este dispositivo se não fizer os pagamentos necessários. Para obter detalhes, veja os <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>Termos de Utilização<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>."</string>
+    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"O fornecedor <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> pode restringir este dispositivo se não fizer os pagamentos necessários. Para obter detalhes, veja os <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>Termos de Utilização<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"O fornecedor <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> pode restringir este dispositivo se o proprietário não fizer os pagamentos"</string>
     <string name="previous" msgid="5241891780917802570">"Anterior"</string>
     <string name="next" msgid="8248291863254324326">"Seguinte"</string>
