--- a/DeviceLockController/res/values-ar/strings.xml
+++ b/DeviceLockController/res/values-ar/strings.xml
@@ -46,7 +46,7 @@
     <string name="open_source_licenses" msgid="6464389386262455443">"تراخيص البرامج المفتوحة المصدر"</string>
     <string name="footer_notice" msgid="7606898520964750584">"لا تسري على هذا الجهاز ميزات الإدارة الأخرى المُدرجة في "<b>"الإعدادات &gt; الأمان &gt; معلومات الجهاز المُدار"</b>"."</string>
     <string name="footer_notice_content_description" msgid="2160540400079419440">"لا تسري على هذا الجهاز ميزات الإدارة المُدرجة في قسم الجهاز المموَّل ضمن إعدادات الأمان."</string>
-    <string name="device_provided_by_provider" msgid="290593329676291991">"يتم توفير هذا الجهاز من قِبل \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\"."</string>
+    <string name="device_provided_by_provider" msgid="290593329676291991">"يتم توفير هذا الجهاز من قِبل \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\""</string>
     <string name="download_kiosk_app" msgid="1845089944897502656">"سيتم تلقائيًا تنزيل تطبيق Kiosk وتثبيته."</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"سيتم تثبيت تطبيق Kiosk على جهاز هذا المستخدِم."</string>
     <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"بإمكان \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\" فرض قيود على هذا الجهاز في حال عدم تسديد إحدى الدفعات."</string>
