--- a/DeviceLockController/res/values-be/strings.xml
+++ b/DeviceLockController/res/values-be/strings.xml
@@ -30,16 +30,16 @@
     <string name="setup_error_title_text" msgid="1123742279081942535">"Не ўдалося адкрыць праграму \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\""</string>
     <string name="try_again" msgid="5964839819170927721">"Паўтарыць спробу"</string>
     <string name="reset_phone" msgid="1161657350311160627">"Скінуць налады тэлефона"</string>
-    <string name="control_section_title" msgid="2213476068991045785">"Магчымасці праграмы \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\""</string>
+    <string name="control_section_title" msgid="2213476068991045785">"Магчымасці \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\""</string>
     <string name="control_lock_device_text" msgid="8253302484073757764">"Абмяжоўваць працу прылады, калі вы не зробіце плацеж"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"Спампуйце, усталюйце і абнавіце праграму \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\""</string>
+    <string name="control_download_text" msgid="8514650561843088172">"Спампоўваць, усталёўваць і абнаўляць праграму \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\""</string>
     <string name="control_disable_debug_text" msgid="8112443250013094442">"Выключаць функцыі адладкі"</string>
-    <string name="locked_section_title" msgid="2748725389334076510">"Якія праграмы будуць працаваць пры заблакіраванай прыладзе?"</string>
+    <string name="locked_section_title" msgid="2748725389334076510">"Якія функцыі будуць працаваць пры заблакіраванай прыладзе?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"Службы экстранных выклікаў"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Уваходныя і некаторыя выходныя выклікі"</string>
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"Налады"</string>
     <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;Рэзервовае капіраванне і аднаўленне&lt;/a&gt; даных"</string>
-    <string name="exposure_section_title" msgid="2329122144337528752">"Якая інфармацыя даступная праграме \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\"?"</string>
+    <string name="exposure_section_title" msgid="2329122144337528752">"Якая інфармацыя даступная \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\"?"</string>
     <string name="exposure_install_text" msgid="2631074166447765453">"Калі праграма \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\" выдалена ці ўсталявана"</string>
     <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"Любыя запыты блакіроўкі і разблакіроўкі ад праграмы \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\""</string>
     <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"Калі праграма \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\" недаступная"</string>
