--- a/DeviceLockController/res/values-da/strings.xml
+++ b/DeviceLockController/res/values-da/strings.xml
@@ -31,9 +31,9 @@
     <string name="try_again" msgid="5964839819170927721">"Prøv igen"</string>
     <string name="reset_phone" msgid="1161657350311160627">"Nulstil telefon"</string>
     <string name="control_section_title" msgid="2213476068991045785">"Hvad kan <xliff:g id="CREDITOR_APP">%1$s</xliff:g> gøre?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"Begræns denne enhed, hvis du ikke foretager en betaling"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"Download, installer og opdater <xliff:g id="CREDITOR_APP">%1$s</xliff:g>-appen"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"Deaktiver funktioner til fejlretning"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"Begrænse denne enhed, hvis du ikke foretager en betaling"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"Downloade, installere og opdatere <xliff:g id="CREDITOR_APP">%1$s</xliff:g>-appen"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"Deaktivere funktioner til fejlretning"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"Hvad fungerer, hvis enheden er låst?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"Tjenester til nødopkald"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Indgående og nogle udgående opkald"</string>
