--- a/DeviceLockController/res/values-de/strings.xml
+++ b/DeviceLockController/res/values-de/strings.xml
@@ -21,7 +21,7 @@
     <string name="next_button" msgid="1856423430963548653">"Weiter"</string>
     <string name="reset_button" msgid="4649354411129240809">"Zurücksetzen"</string>
     <string name="setup_more_button" msgid="4456370972302510109">"Mehr"</string>
-    <string name="setup_info_title_text" msgid="299562193092219293">"So kann die <xliff:g id="CREDITOR_APP">%1$s</xliff:g> App dieses Gerät verwalten"</string>
+    <string name="setup_info_title_text" msgid="299562193092219293">"So kann <xliff:g id="CREDITOR_APP">%1$s</xliff:g> dieses Gerät verwalten"</string>
     <string name="setup_failed_title_text" msgid="9045111389981992536">"Installation der <xliff:g id="CREDITOR_APP">%1$s</xliff:g> App nicht möglich"</string>
     <string name="setup_failed_reset_device_text" msgid="178419033440060908">"Das Gerät wird zurückgesetzt, um es noch einmal zu versuchen."</string>
     <string name="setup_failed_reset_device_timer_text" msgid="5270970227714985986">"{count,plural, =1{Setz das Gerät zurück und versuch noch mal, es einzurichten. Es wird in 1 s automatisch zurückgesetzt.}other{Setz das Gerät zurück und versuch noch mal, es einzurichten. Es wird in # s automatisch zurückgesetzt.}}"</string>
@@ -30,7 +30,7 @@
     <string name="setup_error_title_text" msgid="1123742279081942535">"Die <xliff:g id="CREDITOR_APP">%1$s</xliff:g> App kann nicht geöffnet werden"</string>
     <string name="try_again" msgid="5964839819170927721">"Noch einmal versuchen"</string>
     <string name="reset_phone" msgid="1161657350311160627">"Smartphone zurücksetzen"</string>
-    <string name="control_section_title" msgid="2213476068991045785">"Was kann die <xliff:g id="CREDITOR_APP">%1$s</xliff:g> App tun?"</string>
+    <string name="control_section_title" msgid="2213476068991045785">"Was kann <xliff:g id="CREDITOR_APP">%1$s</xliff:g> tun?"</string>
     <string name="control_lock_device_text" msgid="8253302484073757764">"Bei Nichtzahlung der Raten Nutzbarkeit dieses Geräts einschränken"</string>
     <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> App herunterladen, installieren und aktualisieren"</string>
     <string name="control_disable_debug_text" msgid="8112443250013094442">"Funktionen zur Fehlerbehebung deaktivieren"</string>
@@ -47,9 +47,9 @@
     <string name="footer_notice" msgid="7606898520964750584">"Die anderen Verwaltungsfunktionen unter "<b>"Einstellungen &gt; Sicherheit &gt; Info zu verwalteten Geräten"</b>" gelten nicht für dieses Gerät"</string>
     <string name="footer_notice_content_description" msgid="2160540400079419440">"Die Verwaltungsfunktionen im Abschnitt zu finanzierten Geräten in den Sicherheitseinstellungen gelten nicht für dieses Gerät."</string>
     <string name="device_provided_by_provider" msgid="290593329676291991">"Dieses Gerät wird von <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> zur Verfügung gestellt"</string>
-    <string name="download_kiosk_app" msgid="1845089944897502656">"Die Kiosk-App wird automatisch heruntergeladen und installiert"</string>
+    <string name="download_kiosk_app" msgid="1845089944897502656">"Die Kiosk-App wird automatisch heruntergeladen und installiert."</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"Die Kiosk-App wird für diesen Nutzer installiert"</string>
-    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> kann die Nutzbarkeit dieses Geräts einschränken, wenn du eine Zahlung versäumst"</string>
+    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> kann die Nutzbarkeit dieses Geräts einschränken, wenn du eine Zahlung versäumst."</string>
     <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> kann die Nutzbarkeit dieses Geräts einschränken, wenn du deinen Zahlungsverpflichtungen nicht nachkommst. Ausführliche Informationen findest du in den <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>Nutzungsbedingungen<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>."</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> kann die Nutzbarkeit dieses Geräts einschränken, wenn der Besitzer seinen Zahlungsverpflichtungen nicht nachkommt"</string>
     <string name="previous" msgid="5241891780917802570">"Zurück"</string>
