--- a/DeviceLockController/res/values-el/strings.xml
+++ b/DeviceLockController/res/values-el/strings.xml
@@ -40,7 +40,7 @@
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"Ρυθμίσεις"</string>
     <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;Δημ. αντ. ασφ. και επαναφ.&lt;/a&gt; δεδομ."</string>
     <string name="exposure_section_title" msgid="2329122144337528752">"Τι είναι ορατό στην εφαρμογή <xliff:g id="CREDITOR_APP">%1$s</xliff:g>;"</string>
-    <string name="exposure_install_text" msgid="2631074166447765453">"Κατά την εγκατάσταση ή την απεγκατάσταση της εφαρμογής <xliff:g id="CREDITOR_APP">%1$s</xliff:g>."</string>
+    <string name="exposure_install_text" msgid="2631074166447765453">"Πότε έγινε η εγκατάσταση ή απεγκατάσταση της εφαρμογής <xliff:g id="CREDITOR_APP">%1$s</xliff:g>."</string>
     <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"Τυχόν αιτήματα για κλείδωμα και ξεκλείδωμα από την εφαρμογή <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
     <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"Εάν η εφαρμογή <xliff:g id="CREDITOR_APP">%1$s</xliff:g> δεν είναι διαθέσιμη"</string>
     <string name="open_source_licenses" msgid="6464389386262455443">"Άδειες λογισμικού ανοικτού κώδικα"</string>
