--- a/DeviceLockController/res/values-es-rUS/strings.xml
+++ b/DeviceLockController/res/values-es-rUS/strings.xml
@@ -21,7 +21,7 @@
     <string name="next_button" msgid="1856423430963548653">"Siguiente"</string>
     <string name="reset_button" msgid="4649354411129240809">"Restablecer"</string>
     <string name="setup_more_button" msgid="4456370972302510109">"Más"</string>
-    <string name="setup_info_title_text" msgid="299562193092219293">"Cómo <xliff:g id="CREDITOR_APP">%1$s</xliff:g> administra este dispositivo"</string>
+    <string name="setup_info_title_text" msgid="299562193092219293">"Cómo administra este dispositivo <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
     <string name="setup_failed_title_text" msgid="9045111389981992536">"No se puede instalar la app de <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
     <string name="setup_failed_reset_device_text" msgid="178419033440060908">"Restableciendo el dispositivo para volver a intentarlo."</string>
     <string name="setup_failed_reset_device_timer_text" msgid="5270970227714985986">"{count,plural, =1{Restablece este dispositivo y vuelve a configurarlo. Se restablecerá automáticamente en 1 segundo.}other{Restablece este dispositivo y vuelve a configurarlo. Se restablecerá automáticamente en # segundos.}}"</string>
@@ -47,9 +47,9 @@
     <string name="footer_notice" msgid="7606898520964750584">"Las otras funciones de administración de "<b>"Configuración &gt; Seguridad &gt; Información del dispositivo administrado"</b>" no se aplican a este dispositivo"</string>
     <string name="footer_notice_content_description" msgid="2160540400079419440">"Las funciones de administración de la sección de la Configuración de seguridad del dispositivo financiado no se aplican a este dispositivo."</string>
     <string name="device_provided_by_provider" msgid="290593329676291991">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> proporciona este dispositivo"</string>
-    <string name="download_kiosk_app" msgid="1845089944897502656">"Se descargará e instalará la aplicación de Kiosco automáticamente"</string>
+    <string name="download_kiosk_app" msgid="1845089944897502656">"Se descargará e instalará la aplicación de Kiosco automáticamente."</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"Se instalará la aplicación de Kiosco para este usuario"</string>
-    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> puede restringir este dispositivo si omites un pago"</string>
+    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> puede restringir este dispositivo si omites un pago."</string>
     <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> puede restringir este dispositivo si no realizas los pagos necesarios. Para obtener más información, consulta los <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>Términos y Condiciones<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>."</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> puede restringir este dispositivo si el propietario no realiza los pagos"</string>
     <string name="previous" msgid="5241891780917802570">"Anterior"</string>
@@ -57,7 +57,7 @@
     <string name="start" msgid="2842214844667658537">"Iniciar"</string>
     <string name="ok" msgid="3568398726528719749">"Aceptar"</string>
     <string name="done" msgid="4507782734740410307">"Listo"</string>
-    <string name="do_it_in_one_hour" msgid="2727777340568739453">"Hazlo en 1 hora"</string>
+    <string name="do_it_in_one_hour" msgid="2727777340568739453">"Posponer 1 hora"</string>
     <string name="header_icon_content_description" msgid="6069602031334473195">"Información"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Datos de provisión"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Inscribe tu dispositivo"</string>
