--- a/DeviceLockController/res/values-es/strings.xml
+++ b/DeviceLockController/res/values-es/strings.xml
@@ -47,10 +47,10 @@
     <string name="footer_notice" msgid="7606898520964750584">"Las otras funciones de gestión que se indican en "<b>"Ajustes &gt; Seguridad &gt; Información sobre el dispositivo administrado"</b>" no se aplican a este dispositivo"</string>
     <string name="footer_notice_content_description" msgid="2160540400079419440">"Las funciones de gestión que aparecen en la sección del dispositivo financiado de los ajustes de Seguridad no se aplican a este dispositivo."</string>
     <string name="device_provided_by_provider" msgid="290593329676291991">"Este dispositivo lo proporciona <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
-    <string name="download_kiosk_app" msgid="1845089944897502656">"La aplicación de kiosko se descargará e instalará automáticamente"</string>
+    <string name="download_kiosk_app" msgid="1845089944897502656">"La aplicación de kiosko se descargará e instalará automáticamente."</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"La aplicación de kiosko se instalará para este usuario"</string>
-    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> puede restringir este dispositivo si no realizas un pago"</string>
-    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> puede restringir este dispositivo si no realizas los pagos necesarios. Para ver más detalles, consulta los <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>términos y condiciones<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>."</string>
+    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> puede restringir este dispositivo si no realizas un pago."</string>
+    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> puede restringir este dispositivo si no realizas los pagos necesarios. Para ver más detalles, consulta los <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>Términos y Condiciones<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>."</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> puede restringir este dispositivo si el propietario no realiza los pagos"</string>
     <string name="previous" msgid="5241891780917802570">"Anterior"</string>
     <string name="next" msgid="8248291863254324326">"Siguiente"</string>
@@ -60,7 +60,7 @@
     <string name="do_it_in_one_hour" msgid="2727777340568739453">"Posponer 1 hora"</string>
     <string name="header_icon_content_description" msgid="6069602031334473195">"Información"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Información de aprovisionamiento"</string>
-    <string name="enroll_your_device_header" msgid="2226305405591945098">"Registrar el dispositivo"</string>
+    <string name="enroll_your_device_header" msgid="2226305405591945098">"Registra el dispositivo"</string>
     <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Ahora puedes registrar tu dispositivo en el programa de financiación de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Ahora puedes registrar tu dispositivo en el programa de compensación de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Estás en el programa de compensación de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
