--- a/DeviceLockController/res/values-fa/strings.xml
+++ b/DeviceLockController/res/values-fa/strings.xml
@@ -21,7 +21,7 @@
     <string name="next_button" msgid="1856423430963548653">"بعدی"</string>
     <string name="reset_button" msgid="4649354411129240809">"بازنشانی"</string>
     <string name="setup_more_button" msgid="4456370972302510109">"بیشتر"</string>
-    <string name="setup_info_title_text" msgid="299562193092219293">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> چگونه می‌تواند این دستگاه را مدیریت کند"</string>
+    <string name="setup_info_title_text" msgid="299562193092219293">"‫<xliff:g id="CREDITOR_APP">%1$s</xliff:g> چگونه می‌تواند این دستگاه را مدیریت کند"</string>
     <string name="setup_failed_title_text" msgid="9045111389981992536">"نمی‌توان برنامه <xliff:g id="CREDITOR_APP">%1$s</xliff:g> را نصب کرد"</string>
     <string name="setup_failed_reset_device_text" msgid="178419033440060908">"درحال بازنشانی دستگاه برای امتحان مجدد."</string>
     <string name="setup_failed_reset_device_timer_text" msgid="5270970227714985986">"{count,plural, =1{این دستگاه را بازنشانی کنید و سپس دوباره راه‌اندازی کنید. دستگاه یک ثانیه دیگر به‌طور خودکار بازنشانی خواهد شد.}one{این دستگاه را بازنشانی کنید و سپس دوباره راه‌اندازی کنید. دستگاه # ثانیه دیگر به‌طور خودکار بازنشانی خواهد شد.}other{این دستگاه را بازنشانی کنید و سپس دوباره راه‌اندازی کنید. دستگاه # ثانیه دیگر به‌طور خودکار بازنشانی خواهد شد.}}"</string>
@@ -30,7 +30,7 @@
     <string name="setup_error_title_text" msgid="1123742279081942535">"نمی‌توان برنامه <xliff:g id="CREDITOR_APP">%1$s</xliff:g> را باز کرد"</string>
     <string name="try_again" msgid="5964839819170927721">"امتحان مجدد"</string>
     <string name="reset_phone" msgid="1161657350311160627">"بازنشانی تلفن"</string>
-    <string name="control_section_title" msgid="2213476068991045785">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> چه کاری می‌تواند انجام دهد؟"</string>
+    <string name="control_section_title" msgid="2213476068991045785">"‫<xliff:g id="CREDITOR_APP">%1$s</xliff:g> چه کاری می‌تواند انجام دهد؟"</string>
     <string name="control_lock_device_text" msgid="8253302484073757764">"اگر پرداختی نداشته باشید، این دستگاه محدود می‌شود"</string>
     <string name="control_download_text" msgid="8514650561843088172">"برنامه <xliff:g id="CREDITOR_APP">%1$s</xliff:g> بارگیری، نصب، و به‌روزرسانی می‌شود"</string>
     <string name="control_disable_debug_text" msgid="8112443250013094442">"ویژگی‌های اشکال‌زدایی خاموش می‌شود"</string>
@@ -47,8 +47,8 @@
     <string name="footer_notice" msgid="7606898520964750584">"دیگر قابلیت‌های مدیریتی موجود در "<b>"«تنظیمات &gt; امنیت &gt; اطلاعات دستگاه مدیریت‌شده»"</b>" شامل این دستگاه نمی‌شود"</string>
     <string name="footer_notice_content_description" msgid="2160540400079419440">"قابلیت‌های مدیریتی موجود در بخش دستگاه دارای پشتیبانی مالی از «تنظیمات امنیتی» شامل این دستگاه نمی‌شود."</string>
     <string name="device_provided_by_provider" msgid="290593329676291991">"این دستگاه را <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ارائه کرده است"</string>
-    <string name="download_kiosk_app" msgid="1845089944897502656">"«برنامه کیوسکی» به‌طور خودکار بارگیری و نصب خواهد شد"</string>
-    <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"«برنامه کیوسکی» برای این کاربر نصب خواهد شد"</string>
+    <string name="download_kiosk_app" msgid="1845089944897502656">"برنامه «کیوسک» به‌طور خودکار بارگیری و نصب خواهد شد"</string>
+    <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"برنامه «کیوسک» برای این کاربر نصب خواهد شد"</string>
     <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"اگر پرداختی را انجام ندهید، <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> می‌تواند این دستگاه را محدود کند"</string>
     <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"اگر پرداخت‌های ضروری را انجام ندهید، <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> می‌تواند این دستگاه را محدود کند. برای جزئیات، <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>شرایط خدمات<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g> را مشاهده کنید."</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"اگر مالک پرداخت‌ها را انجام ندهد، <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> می‌تواند این دستگاه را محدود کند"</string>
@@ -73,7 +73,7 @@
     <string name="device_removed_from_subsidy_program" msgid="1243434945619071051">"دستگاه از برنامه یارانه <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> برداشته شد"</string>
     <string name="device_removed_from_finance_program" msgid="825548999540107578">"دستگاهتان از برنامه مالی <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> برداشته شده است"</string>
     <string name="restrictions_lifted" msgid="5785586265984319396">"همه محدودیت‌های اعمال‌شده روی دستگاه برداشته شد"</string>
-    <string name="uninstall_kiosk_app" msgid="3459557395024053988">"می‌توانید «برنامه کیوسکی» را از دستگاهتان حذف نصب کنید"</string>
+    <string name="uninstall_kiosk_app" msgid="3459557395024053988">"می‌توانید برنامه «کیوسک» را از دستگاهتان حذف نصب کنید"</string>
     <string name="getting_device_ready" msgid="2829009584599871699">"درحال آماده کردن دستگاه…"</string>
     <string name="this_may_take_a_few_minutes" msgid="2482876246874429351">"ممکن است چند دقیقه طول بکشد"</string>
     <string name="installing_kiosk_app" msgid="324208168205545860">"درحال نصب برنامه <xliff:g id="CREDITOR_APP">%1$s</xliff:g>…"</string>
@@ -82,7 +82,7 @@
     <string name="settings_banner_body" msgid="5814902066260202824">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> می‌تواند تنظیمات این دستگاه را تغییر دهد"</string>
     <string name="settings_banner_button" msgid="1831020849782670907">"بیشتر بدانید"</string>
     <string name="settings_screen_title" msgid="721470080648091035">"اطلاعات دستگاه دارای پشتیبانی مالی"</string>
-    <string name="settings_intro" msgid="5809531331925309396">"ارائه‌دهنده اعتبار می‌تواند تنظیمات را تغییر دهد و «برنامه کیوسکی» را در دستگاه نصب کند.\n\nاگر پرداخت‌های ضروری را انجام ندهید یا استفاده از سیم‌کارت <xliff:g id="PROVIDER_NAME_1">%1$s</xliff:g> را متوقف کنید، <xliff:g id="PROVIDER_NAME_0">%1$s</xliff:g> می‌تواند این دستگاه را محدود کند.\n\nبرای کسب اطلاعات بیشتر، با <xliff:g id="PROVIDER_NAME_2">%1$s</xliff:g> تماس بگیرید."</string>
+    <string name="settings_intro" msgid="5809531331925309396">"ارائه‌دهنده اعتبار می‌تواند تنظیمات را تغییر دهد و برنامه «کیوسک» را در دستگاه نصب کند.\n\nاگر پرداخت‌های ضروری را انجام ندهید یا استفاده از سیم‌کارت <xliff:g id="PROVIDER_NAME_1">%1$s</xliff:g> را متوقف کنید، <xliff:g id="PROVIDER_NAME_0">%1$s</xliff:g> می‌تواند این دستگاه را محدود کند.\n\nبرای کسب اطلاعات بیشتر، با <xliff:g id="PROVIDER_NAME_2">%1$s</xliff:g> تماس بگیرید."</string>
     <string name="settings_intro_preference_key" msgid="6610461073400554162">"settings_intro_preference_key"</string>
     <string name="settings_restrictions_category" msgid="5746868117342406677">"تا زمانی‌که هزینه دستگاه را پرداخت نکنید، نمی‌توانید:"</string>
     <string name="settings_restrictions_category_preference_key" msgid="88318147152676512">"settings_restrictions_category_preference_key"</string>
