--- a/DeviceLockController/res/values-fr-rCA/strings.xml
+++ b/DeviceLockController/res/values-fr-rCA/strings.xml
@@ -41,7 +41,7 @@
     <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;Sauvegarde et restauration&lt;/a&gt; de vos données"</string>
     <string name="exposure_section_title" msgid="2329122144337528752">"Qu\'est-ce qui est visible pour <xliff:g id="CREDITOR_APP">%1$s</xliff:g>?"</string>
     <string name="exposure_install_text" msgid="2631074166447765453">"Quand l\'application <xliff:g id="CREDITOR_APP">%1$s</xliff:g> est installée ou désinstallée"</string>
-    <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"Toute demande de verrouillage ou de déverrouillage effectuée par <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
+    <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"Toute demande de verrouillage ou de déverrouillage de <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
     <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"Si l\'application <xliff:g id="CREDITOR_APP">%1$s</xliff:g> n\'est pas accessible"</string>
     <string name="open_source_licenses" msgid="6464389386262455443">"Licences de logiciels libres"</string>
     <string name="footer_notice" msgid="7606898520964750584">"Les autres fonctionnalités de gestion sous "<b>"Paramètres &gt; Sécurité &gt; Renseignements sur l\'appareil géré"</b>" ne s\'appliquent pas à cet appareil"</string>
@@ -57,10 +57,10 @@
     <string name="start" msgid="2842214844667658537">"Commencer"</string>
     <string name="ok" msgid="3568398726528719749">"OK"</string>
     <string name="done" msgid="4507782734740410307">"OK"</string>
-    <string name="do_it_in_one_hour" msgid="2727777340568739453">"Reporter 1 heure"</string>
+    <string name="do_it_in_one_hour" msgid="2727777340568739453">"Dans 1 heure"</string>
     <string name="header_icon_content_description" msgid="6069602031334473195">"Info"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Infos sur provision"</string>
-    <string name="enroll_your_device_header" msgid="2226305405591945098">"Inscrire votre appareil"</string>
+    <string name="enroll_your_device_header" msgid="2226305405591945098">"Inscrire l\'appareil"</string>
     <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Vous pouvez désormais inscrire votre appareil au programme de financement de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Vous pouvez désormais inscrire votre appareil au programme de subvention de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Vous bénéficiez d\'une subvention de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
