--- a/DeviceLockController/res/values-hi/strings.xml
+++ b/DeviceLockController/res/values-hi/strings.xml
@@ -31,9 +31,9 @@
     <string name="try_again" msgid="5964839819170927721">"फिर से कोशिश करें"</string>
     <string name="reset_phone" msgid="1161657350311160627">"फ़ोन रीसेट करें"</string>
     <string name="control_section_title" msgid="2213476068991045785">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> क्या कर सकता है?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"पेमेंट न करने पर, इस डिवाइस पर पाबंदी लगाएं"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ऐप्लिकेशन को डाउनलोड, इंस्टॉल, और अपडेट करें"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"डीबग करने की सुविधा बंद करें"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"पेमेंट न करने पर, इस डिवाइस पर पाबंदी लगा सकता है"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ऐप्लिकेशन को डाउनलोड, इंस्टॉल, और अपडेट कर सकता है"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"डीबग करने की सुविधा बंद कर सकता है"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"डिवाइस लॉक हो जाने पर, किन सुविधाओं का इस्तेमाल किया जा सकता है?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"आपातकालीन कॉल करने की सुविधा"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"इनकमिंग और कुछ आउटगोइंग काॅल"</string>
