--- a/DeviceLockController/res/values-in/strings.xml
+++ b/DeviceLockController/res/values-in/strings.xml
@@ -31,25 +31,25 @@
     <string name="try_again" msgid="5964839819170927721">"Coba lagi"</string>
     <string name="reset_phone" msgid="1161657350311160627">"Reset ponsel"</string>
     <string name="control_section_title" msgid="2213476068991045785">"Apa yang dapat dilakukan <xliff:g id="CREDITOR_APP">%1$s</xliff:g>?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"Batasi perangkat ini jika Anda tidak melakukan pembayaran"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"Download, instal, dan update aplikasi <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"Nonaktifkan fitur proses debug"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"Membatasi perangkat ini jika Anda tidak melakukan pembayaran"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"Mendownload, menginstal, dan mengupdate aplikasi <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"Menonaktifkan fitur proses debug"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"Apa yang berfungsi jika perangkat ini dikunci?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"Layanan panggilan darurat"</string>
-    <string name="locked_phone_usage_text" msgid="1913605870324552847">"Panggilan masuk dan beberapa panggilan keluar"</string>
+    <string name="locked_phone_usage_text" msgid="1913605870324552847">"Panggilan masuk dan sebagian panggilan keluar"</string>
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"Setelan"</string>
-    <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;Mencadangkan dan memulihkan&lt;/a&gt; data Anda"</string>
+    <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;Pencadangan dan pemulihan&lt;/a&gt; data Anda"</string>
     <string name="exposure_section_title" msgid="2329122144337528752">"Apa yang dapat dilihat oleh <xliff:g id="CREDITOR_APP">%1$s</xliff:g>?"</string>
-    <string name="exposure_install_text" msgid="2631074166447765453">"Saat aplikasi <xliff:g id="CREDITOR_APP">%1$s</xliff:g> diinstal atau di-uninstal"</string>
+    <string name="exposure_install_text" msgid="2631074166447765453">"Kapan aplikasi <xliff:g id="CREDITOR_APP">%1$s</xliff:g> diinstal atau di-uninstal"</string>
     <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"Permintaan kunci atau buka kunci apa pun dari <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
-    <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"Jika aplikasi <xliff:g id="CREDITOR_APP">%1$s</xliff:g> tidak tersedia"</string>
+    <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"Apakah aplikasi <xliff:g id="CREDITOR_APP">%1$s</xliff:g> tidak tersedia"</string>
     <string name="open_source_licenses" msgid="6464389386262455443">"Lisensi open source"</string>
     <string name="footer_notice" msgid="7606898520964750584">"Kemampuan pengelolaan lain di "<b>"Setelan &gt; Keamanan &gt; Info perangkat terkelola"</b>" tidak berlaku untuk perangkat ini"</string>
     <string name="footer_notice_content_description" msgid="2160540400079419440">"Kemampuan pengelolaan di bagian perangkat yang dibiayai di setelan Keamanan tidak berlaku untuk perangkat ini."</string>
     <string name="device_provided_by_provider" msgid="290593329676291991">"Perangkat ini disediakan oleh <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="download_kiosk_app" msgid="1845089944897502656">"Aplikasi Kios akan otomatis didownload dan diinstal"</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"Aplikasi Kios akan diinstal untuk pengguna ini"</string>
-    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> dapat membatasi perangkat ini jika Anda melewatkan pembayaran"</string>
+    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> dapat membatasi perangkat ini jika Anda melalaikan pembayaran"</string>
     <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> dapat membatasi perangkat ini jika Anda tidak melakukan pembayaran yang diperlukan. Untuk mengetahui detailnya, lihat <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>Persyaratan &amp; Ketentuan<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>."</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> dapat membatasi perangkat ini jika pemilik tidak melakukan pembayaran"</string>
     <string name="previous" msgid="5241891780917802570">"Sebelumnya"</string>
