--- a/DeviceLockController/res/values-ja/strings.xml
+++ b/DeviceLockController/res/values-ja/strings.xml
@@ -49,7 +49,7 @@
     <string name="device_provided_by_provider" msgid="290593329676291991">"このデバイスは <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> から提供されています"</string>
     <string name="download_kiosk_app" msgid="1845089944897502656">"キオスクアプリは自動的にダウンロード、インストールされます"</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"このユーザーに対してキオスクアプリがインストールされます"</string>
-    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"支払いができなかった場合、<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> はこのデバイスを制限する可能性があります"</string>
+    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"支払いが行われなかった場合、<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> はこのデバイスを制限する可能性があります"</string>
     <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"必要な支払いを行わない場合、<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> はこのデバイスを制限する可能性があります。詳しくは、<xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>利用規約<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>をご覧ください。"</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"所有者が支払いを行わない場合、<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> はこのデバイスを制限する可能性があります"</string>
     <string name="previous" msgid="5241891780917802570">"前へ"</string>
