--- a/DeviceLockController/res/values-kk/strings.xml
+++ b/DeviceLockController/res/values-kk/strings.xml
@@ -38,9 +38,9 @@
     <string name="locked_emergency_text" msgid="3509216445555779286">"Құтқару қызметіне қоңырау шалу қызметтері"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Кіріс және кейбір шығыс қоңыраулар"</string>
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"Параметрлер"</string>
-    <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;Деректердің сақтық көшірмесін жасау&lt;/a&gt; және оларды қалпына келтіру"</string>
+    <string name="locked_backup_and_restore_text" msgid="104616318625243429">"Деректердің &lt;a href=https://support.google.com/android/answer/2819582&gt;сақтық көшірмесін жасау және оларды қалпына келтіру&lt;/a&gt;"</string>
     <string name="exposure_section_title" msgid="2329122144337528752">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> қолданбасына қандай ақпарат көрінеді?"</string>
-    <string name="exposure_install_text" msgid="2631074166447765453">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> қолданбасы орнатылғанда не жойылғанда"</string>
+    <string name="exposure_install_text" msgid="2631074166447765453">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> қолданбасының орнатылуы және жойылуы"</string>
     <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> қолданбасының құлыптау және құлыпты ашу сұраулары"</string>
     <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> қолданбасы қолжетімді болмаса"</string>
     <string name="open_source_licenses" msgid="6464389386262455443">"Ашық кодты бағдарлама лицензиялары"</string>
