--- a/DeviceLockController/res/values-kn/strings.xml
+++ b/DeviceLockController/res/values-kn/strings.xml
@@ -32,13 +32,13 @@
     <string name="reset_phone" msgid="1161657350311160627">"ಫೋನ್‌ ರೀಸೆಟ್ ಮಾಡಿ"</string>
     <string name="control_section_title" msgid="2213476068991045785">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ಆ್ಯಪ್ ಏನನ್ನು ಮಾಡಬಹುದು?"</string>
     <string name="control_lock_device_text" msgid="8253302484073757764">"ನೀವು ಪಾವತಿ ಮಾಡದಿದ್ದರೆ, ಸಾಧನವನ್ನು ನಿರ್ಬಂಧಿಸಲಾಗುತ್ತದೆ"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ಆ್ಯಪ್ ಅನ್ನು ಡೌನ್‌ಲೋಡ್ ಮಾಡಿ, ಇನ್‌ಸ್ಟಾಲ್ ಮಾಡಿ ಮತ್ತು ಅಪ್‌ಡೇಟ್‌ ಮಾಡಿ"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"ಡೀಬಗ್ ಮಾಡುವ ಫೀಚರ್‌ಗಳನ್ನು ಆಫ್ ಮಾಡಿ"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ಆ್ಯಪ್ ಅನ್ನು ಡೌನ್‌ಲೋಡ್, ಇನ್‌ಸ್ಟಾಲ್ ಮತ್ತು ಅಪ್‌ಡೇಟ್‌ ಮಾಡುವುದು"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"ಡೀಬಗ್ ಮಾಡುವ ಫೀಚರ್‌ಗಳನ್ನು ಆಫ್ ಮಾಡುವುದು"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"ಈ ಸಾಧನವು ಲಾಕ್ ಆದರೆ ಏನು ಕಾರ್ಯನಿರ್ವಹಿಸುತ್ತದೆ?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"ತುರ್ತು ಕರೆ ಮಾಡುವಿಕೆ ಸೌಲಭ್ಯಗಳು"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"ಒಳಬರುವ ಮತ್ತು ಕೆಲವು ಹೊರಹೋಗುವ ಕರೆಗಳು"</string>
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</string>
-    <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;ನಿಮ್ಮ ಡೇಟಾವನ್ನು&lt;/a&gt; ಬ್ಯಾಕಪ್ ಮಾಡಲಾಗುತ್ತಿದೆ ಮತ್ತು ಮರುಸ್ಥಾಪಿಸಲಾಗುತ್ತಿದೆ"</string>
+    <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;ನಿಮ್ಮ ಡೇಟಾವನ್ನು&lt;/a&gt; ಬ್ಯಾಕಪ್ ಮಾಡುವುದು ಮತ್ತು ಮರುಸ್ಥಾಪಿಸುವುದು"</string>
     <string name="exposure_section_title" msgid="2329122144337528752">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ಗೆ ಏನು ಗೋಚರಿಸುತ್ತದೆ?"</string>
     <string name="exposure_install_text" msgid="2631074166447765453">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ಆ್ಯಪ್ ಅನ್ನು ಇನ್‌ಸ್ಟಾಲ್ ಅಥವಾ ಅನ್‌ಇನ್‌ಸ್ಟಾಲ್ ಮಾಡಿದಾಗ"</string>
     <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ನಿಂದ ಎಲ್ಲಾ ಲಾಕ್ ಅಥವಾ ಅನ್‌ಲಾಕ್ ವಿನಂತಿಗಳು"</string>
@@ -50,7 +50,7 @@
     <string name="download_kiosk_app" msgid="1845089944897502656">"kiosk ಆ್ಯಪ್ ಅನ್ನು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ಡೌನ್‌ಲೋಡ್ ಹಾಗೂ ಇನ್‌ಸ್ಟಾಲ್ ಮಾಡಲಾಗುತ್ತದೆ"</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"ಈ ಬಳಕೆದಾರರಿಗಾಗಿ Kiosk ಆ್ಯಪ್ ಅನ್ನು ಇನ್‌ಸ್ಟಾಲ್ ಮಾಡಲಾಗುತ್ತದೆ"</string>
     <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"ನೀವು ಪಾವತಿಯನ್ನು ಮಿಸ್ ಮಾಡಿಕೊಂಡರೆ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ಈ ಸಾಧನವನ್ನು ನಿರ್ಬಂಧಿಸಬಹುದು"</string>
-    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"ನೀವು ಅಗತ್ಯವಿರುವ ಪಾವತಿಗಳನ್ನು ಮಾಡದಿದ್ದರೆ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ಈ ಸಾಧನವನ್ನು ನಿಯಂತ್ರಿಸಬಹುದು. ವಿವರಗಳಿಗಾಗಿ, <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳನ್ನು<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g> ನೋಡಿ."</string>
+    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"ನೀವು ಅಗತ್ಯವಿರುವ ಪಾವತಿಗಳನ್ನು ಮಾಡದಿದ್ದರೆ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ಈ ಸಾಧನವನ್ನು ನಿರ್ಬಂಧಿಸಬಹುದು. ವಿವರಗಳಿಗಾಗಿ, <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳನ್ನು<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g> ನೋಡಿ."</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"ಮಾಲೀಕರು ಪಾವತಿಗಳನ್ನು ಮಾಡದಿದ್ದರೆ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ಈ ಸಾಧನವನ್ನು ನಿರ್ಬಂಧಿಸಬಹುದು"</string>
     <string name="previous" msgid="5241891780917802570">"ಹಿಂದಿನದು"</string>
     <string name="next" msgid="8248291863254324326">"ಮುಂದಿನದು"</string>
