--- a/DeviceLockController/res/values-ky/strings.xml
+++ b/DeviceLockController/res/values-ky/strings.xml
@@ -31,18 +31,18 @@
     <string name="try_again" msgid="5964839819170927721">"Кайталоо"</string>
     <string name="reset_phone" msgid="1161657350311160627">"Телефонду баштапкы абалга келтирүү"</string>
     <string name="control_section_title" msgid="2213476068991045785">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> эмнелерди жасай алат?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"Эгер төлөбөсөңүз, бул түзмөктү чектеп коюу"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> колдонмосун жүктөп алуу, орнотуу жана жаңыртуу"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"Мүчүлүштүктөрдү оңдоо функцияларын өчүрүү"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"Эгер төлөбөсөңүз, бул түзмөктү чектеп коет"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> колдонмосун жүктөп алып, орнотуп жана жаңыртат"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"Мүчүлүштүктөрдү оңдогон функцияларды өчүрөт"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"Бул түзмөк кулпуланганда эмне иштейт?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"Шашылыш чалуу кызматтары"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Кирүүчү жана айрым чыгуучу чалуулар"</string>
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"Параметрлер"</string>
     <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;Маалыматыңыздын&lt;/a&gt; камдык көчүрмөсүн сактоо жана калыбына келтирүү"</string>
     <string name="exposure_section_title" msgid="2329122144337528752">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> эмнени көрө алат?"</string>
-    <string name="exposure_install_text" msgid="2631074166447765453">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> колдонмосу орнотулуп же өчүрүлгөндө"</string>
-    <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> жөнөткөн бардык кулпулоо же кулпуну ачуу сурамдары"</string>
-    <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"Эгер <xliff:g id="CREDITOR_APP">%1$s</xliff:g> колдонмосу жеткиликсиз болсо"</string>
+    <string name="exposure_install_text" msgid="2631074166447765453">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> колдонмосунун орнотулуп же өчүрүлгөнүн"</string>
+    <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> жөнөткөн бардык кулпулоо же кулпуну ачуу сурамдарын"</string>
+    <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> колдонмосунун түзмөктө жеткиликсиз экенин"</string>
     <string name="open_source_licenses" msgid="6464389386262455443">"Ачык программа уруксаттамалары"</string>
     <string name="footer_notice" msgid="7606898520964750584"><b>"Параметрлер &gt; Коопсуздук &gt; Башкарылган түзмөк жөнүндө маалымат"</b>" бөлүмүндөгү башка башкаруу мүмкүнчүлүктөрү бул түзмөктө колдонулбайт"</string>
     <string name="footer_notice_content_description" msgid="2160540400079419440">"Коопсуздук параметрлеринин каржыланган түзмөк бөлүмүндөгү башкаруу мүмкүнчүлүктөрү бул түзмөккө карата колдонулбайт."</string>
@@ -50,7 +50,7 @@
     <string name="download_kiosk_app" msgid="1845089944897502656">"Киоск колдонмосу автоматтык түрдө жүктөлүп алынып, орнотулат"</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"Киоск колдонмосу бул колдонуучу үчүн орнотулат"</string>
     <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"Эгер төлөмдү өткөрүп жиберсеңиз, <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> бул түзмөктү чектеши мүмкүн"</string>
-    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"Керектүү төлөмдөрдү аткарбасаңыз, <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> бул түзмөктү чектеши мүмкүн. Толук маалымат алуу үчүн <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>Жоболорду жана шарттарды<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g> караңыз."</string>
+    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"Талап кылынган нерселердин акысын төлөбөсөңүз, <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> бул түзмөктүн иштешин чектеши мүмкүн. Толук маалымат алуу үчүн <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>Жоболорду жана шарттарды<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g> караңыз."</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"Эгер ээси төлөмдөрдү аткарбаса, <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> бул түзмөктү чектеши мүмкүн"</string>
     <string name="previous" msgid="5241891780917802570">"Мурунку"</string>
     <string name="next" msgid="8248291863254324326">"Кийинки"</string>
