--- a/DeviceLockController/res/values-mk/strings.xml
+++ b/DeviceLockController/res/values-mk/strings.xml
@@ -31,9 +31,9 @@
     <string name="try_again" msgid="5964839819170927721">"Обиди се повторно"</string>
     <string name="reset_phone" msgid="1161657350311160627">"Ресетирај го телефонот"</string>
     <string name="control_section_title" msgid="2213476068991045785">"Што може да прави <xliff:g id="CREDITOR_APP">%1$s</xliff:g>?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"Уредот ќе биде ограничен ако не извршите плаќање"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"Преземете ја, инсталирајте ја и ажурирајте ја апликацијата <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"Исклучете ги функциите за отстранување грешки"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"да го ограничи уредов ако не извршите плаќање"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"да ја преземе, инсталира и ажурира апликацијата <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"да ги исклучи функциите за отстранување грешки"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"Што работи кога уредов е заклучен?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"Услуги за итни повици"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Дојдовни и некои појдовни повици"</string>
@@ -63,7 +63,7 @@
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Регистрирајте го уредот"</string>
     <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Сега може да го регистрирате вашиот уред во финансиската програма на <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Сега може да го регистрирате вашиот уред во програмата за субвенции на <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
-    <string name="subsidy_program_header" msgid="2321508488856303554">"Дел сте од програмата за субвенции на <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <string name="subsidy_program_header" msgid="2321508488856303554">"Ја користите програмата за субвенции на <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Регистрирање на уредот"</string>
     <string name="device_financing_enrollment_body_text" msgid="5506086383249511498">"Вашиот уред ќе биде регистриран во финансиската програма на <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> во рок од 30 дена"</string>
     <string name="device_subsidy_enrollment_body_text" msgid="3971584929178719388">"Вашиот уред ќе биде регистриран во програмата за субвенции на <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> во рок од 30 дена"</string>
