--- a/DeviceLockController/res/values-ne/strings.xml
+++ b/DeviceLockController/res/values-ne/strings.xml
@@ -31,9 +31,9 @@
     <string name="try_again" msgid="5964839819170927721">"फेरि प्रयास गर्नुहोस्"</string>
     <string name="reset_phone" msgid="1161657350311160627">"फोन रिसेट गर्नुहोस्"</string>
     <string name="control_section_title" msgid="2213476068991045785">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ले के गर्न सक्छ?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"तपाईंले भुक्तानी गर्नुभएन भने यो डिभाइसमाथि प्रतिबन्ध लगाइयोस्"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> एप डाउनलोड, इन्स्टल र अपडेट गर्नुहोस्"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"डिबग गर्ने सुविधाहरू अफ गर्नुहोस्"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"तपाईंले भुक्तानी गर्नुभएन भने यो डिभाइसमाथि प्रतिबन्ध लगाउन"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> का एप डाउनलोड, इन्स्टल र अपडेट गर्न"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"डिबग गर्ने सुविधाहरू अफ गर्न"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"यो डिभाइस लक हुँदा कुन कुन सुविधाहरूले काम गर्छन्?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"आपत्कालीन अवस्थामा कल गर्ने सेवाहरू"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"आगमन कल र केही बहिर्गमन कलहरू"</string>
