--- a/DeviceLockController/res/values-pa/strings.xml
+++ b/DeviceLockController/res/values-pa/strings.xml
@@ -21,7 +21,7 @@
     <string name="next_button" msgid="1856423430963548653">"ਅੱਗੇ"</string>
     <string name="reset_button" msgid="4649354411129240809">"ਰੀਸੈੱਟ ਕਰੋ"</string>
     <string name="setup_more_button" msgid="4456370972302510109">"ਹੋਰ"</string>
-    <string name="setup_info_title_text" msgid="299562193092219293">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ਇਸ ਡੀਵਾਈਸ ਦਾ ਪ੍ਰਬੰਧਨ ਕਿਵੇਂ ਕਰ ਸਕਦੀ ਹੈ"</string>
+    <string name="setup_info_title_text" msgid="299562193092219293">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ਵੱਲੋਂ ਇਸ ਡੀਵਾਈਸ ਦਾ ਪ੍ਰਬੰਧਨ ਕਿਵੇਂ ਕੀਤਾ ਜਾ ਸਕਦਾ ਹੈ"</string>
     <string name="setup_failed_title_text" msgid="9045111389981992536">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ਐਪ ਨੂੰ ਸਥਾਪਤ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਦਾ"</string>
     <string name="setup_failed_reset_device_text" msgid="178419033440060908">"ਦੁਬਾਰਾ ਕੋਸ਼ਿਸ਼ ਕਰਨ ਲਈ ਡੀਵਾਈਸ ਨੂੰ ਰੀਸੈੱਟ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ।"</string>
     <string name="setup_failed_reset_device_timer_text" msgid="5270970227714985986">"{count,plural, =1{ਇਸ ਡੀਵਾਈਸ ਨੂੰ ਰੀਸੈੱਟ ਕਰ ਕੇ ਦੁਬਾਰਾ ਸੈੱਟਅੱਪ ਕਰਨ ਦੀ ਕੋਸ਼ਿਸ਼ ਕਰੋ। ਇਹ 1 ਸਕਿੰਟ ਵਿੱਚ ਖੁਦ ਰੀਸੈੱਟ ਹੋ ਜਾਵੇਗਾ।}one{ਇਸ ਡੀਵਾਈਸ ਨੂੰ ਰੀਸੈੱਟ ਕਰ ਕੇ ਦੁਬਾਰਾ ਸੈੱਟਅੱਪ ਕਰਨ ਦੀ ਕੋਸ਼ਿਸ਼ ਕਰੋ। ਇਹ # ਸਕਿੰਟ ਵਿੱਚ ਖੁਦ ਰੀਸੈੱਟ ਹੋ ਜਾਵੇਗਾ।}other{ਇਸ ਡੀਵਾਈਸ ਨੂੰ ਰੀਸੈੱਟ ਕਰ ਕੇ ਦੁਬਾਰਾ ਸੈੱਟਅੱਪ ਕਰਨ ਦੀ ਕੋਸ਼ਿਸ਼ ਕਰੋ। ਇਹ # ਸਕਿੰਟਾਂ ਵਿੱਚ ਖੁਦ ਰੀਸੈੱਟ ਹੋ ਜਾਵੇਗਾ।}}"</string>
@@ -30,26 +30,26 @@
     <string name="setup_error_title_text" msgid="1123742279081942535">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ਐਪ ਖੋਲ੍ਹੀ ਨਹੀਂ ਜਾ ਸਕਦੀ"</string>
     <string name="try_again" msgid="5964839819170927721">"ਦੁਬਾਰਾ ਕੋਸ਼ਿਸ਼ ਕਰੋ"</string>
     <string name="reset_phone" msgid="1161657350311160627">"ਫ਼ੋਨ ਰੀਸੈੱਟ ਕਰੋ"</string>
-    <string name="control_section_title" msgid="2213476068991045785">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ਕੀ ਕਰ ਸਕਦੀ ਹੈ?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"ਜੇ ਤੁਸੀਂ ਭੁਗਤਾਨ ਨਹੀਂ ਕਰਦੇ, ਤਾਂ ਇਸ ਡੀਵਾਈਸ \'ਤੇ ਪਾਬੰਦੀ ਲਗਾਓ"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ਐਪ ਨੂੰ ਡਾਊਨਲੋਡ, ਸਥਾਪਤ ਅਤੇ ਅੱਪਡੇਟ ਕਰੋ"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"ਡੀਬੱਗਿੰਗ ਵਿਸ਼ੇਸ਼ਤਾਵਾਂ ਨੂੰ ਬੰਦ ਕਰੋ"</string>
+    <string name="control_section_title" msgid="2213476068991045785">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ਵੱਲੋਂ ਕੀ ਕੀਤਾ ਜਾ ਸਕਦਾ ਹੈ?"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"ਤੁਹਾਡੇ ਵੱਲੋਂ ਭੁਗਤਾਨ ਨਾ ਕੀਤੇ ਜਾਣ \'ਤੇ, ਇਸ ਡੀਵਾਈਸ ਨੂੰ ਪ੍ਰਤੀਬੰਧਿਤ ਕੀਤਾ ਜਾ ਸਕਦਾ ਹੈ"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ਐਪ ਨੂੰ ਡਾਊਨਲੋਡ, ਸਥਾਪਤ ਅਤੇ ਅੱਪਡੇਟ ਕੀਤਾ ਜਾ ਸਕਦਾ ਹੈ"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"ਡੀਬੱਗਿੰਗ ਵਿਸ਼ੇਸ਼ਤਾਵਾਂ ਨੂੰ ਬੰਦ ਕੀਤਾ ਜਾ ਸਕਦਾ ਹੈ"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"ਇਸ ਡੀਵਾਈਸ ਦੇ ਲਾਕ ਹੋਣ \'ਤੇ ਕਿਹੜੀ ਚੀਜ਼ ਕੰਮ ਕਰਦੀ ਹੈ?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"ਐਮਰਜੈਂਸੀ ਕਾਲਿੰਗ ਸੇਵਾਵਾਂ"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"ਇਨਕਮਿੰਗ ਅਤੇ ਕੁਝ ਆਊਟਗੋਇੰਗ ਕਾਲਾਂ"</string>
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"ਸੈਟਿੰਗਾਂ"</string>
     <string name="locked_backup_and_restore_text" msgid="104616318625243429">"ਤੁਹਾਡੇ ਡਾਟੇ ਦਾ &lt;a href=https://support.google.com/android/answer/2819582&gt;ਬੈਕਅੱਪ ਲੈਣਾ ਅਤੇ ਉਸਨੂੰ ਮੁੜ-ਬਹਾਲ ਕਰਨਾ&lt;/a&gt;"</string>
     <string name="exposure_section_title" msgid="2329122144337528752">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ਨੂੰ ਕੀ ਦਿਖਾਈ ਦਿੰਦਾ ਹੈ?"</string>
-    <string name="exposure_install_text" msgid="2631074166447765453">"ਜਦੋਂ <xliff:g id="CREDITOR_APP">%1$s</xliff:g> ਐਪ ਨੂੰ ਸਥਾਪਤ ਅਤੇ ਅਣਸਥਾਪਤ ਕੀਤਾ ਜਾਂਦਾ ਹੈ"</string>
+    <string name="exposure_install_text" msgid="2631074166447765453">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ਐਪ ਨੂੰ ਕਦੋਂ ਸਥਾਪਤ ਅਤੇ ਅਣਸਥਾਪਤ ਕੀਤਾ ਜਾਂਦਾ ਹੈ"</string>
     <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ਤੋਂ ਲਾਕ ਜਾਂ ਅਣਲਾਕ ਕਰਨ ਲਈ ਕੋਈ ਬੇਨਤੀ"</string>
-    <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"ਜੇ <xliff:g id="CREDITOR_APP">%1$s</xliff:g> ਐਪ ਉਪਲਬਧ ਨਹੀਂ ਹੈ"</string>
+    <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ਐਪ ਉਪਲਬਧ ਹੈ ਜਾਂ ਨਹੀਂ"</string>
     <string name="open_source_licenses" msgid="6464389386262455443">"ਖੁੱਲ੍ਹੇ ਸਰੋਤ ਲਾਇਸੰਸ"</string>
     <string name="footer_notice" msgid="7606898520964750584">"ਇਸ ਡੀਵਾਈਸ \'ਤੇ "<b>"ਸੈਟਿੰਗਾਂ, &amp;gt ਸੁਰੱਖਿਆ, &amp;gt ਪ੍ਰਬੰਧਿਤ ਕੀਤੇ ਡੀਵਾਈਸ ਬਾਰੇ ਜਾਣਕਾਰੀ"</b>" ਵਿੱਚ ਹੋਰ ਪ੍ਰਬੰਧਨ ਸਮਰੱਥਾਵਾਂ ਲਾਗੂ ਨਹੀਂ ਹੁੰਦੀਆਂ"</string>
     <string name="footer_notice_content_description" msgid="2160540400079419440">"ਸੁਰੱਖਿਆ ਸੈਟਿੰਗਾਂ ਦੇ ਵਿੱਤ ਪ੍ਰਬੰਧਿਤ ਡੀਵਾਈਸ ਸੈਕਸ਼ਨ ਵਿਚਲੀਆਂ ਪ੍ਰਬੰਧਨ ਸਮਰੱਥਾਵਾਂ ਇਸ ਡੀਵਾਈਸ \'ਤੇ ਲਾਗੂ ਨਹੀਂ ਹੁੰਦੀਆਂ।"</string>
     <string name="device_provided_by_provider" msgid="290593329676291991">"ਇਹ ਡੀਵਾਈਸ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ਵੱਲੋਂ ਮੁਹੱਈਆ ਕਰਵਾਇਆ ਗਿਆ ਹੈ"</string>
     <string name="download_kiosk_app" msgid="1845089944897502656">"ਕਿਓਸਕ ਐਪ ਸਵੈਚਲਿਤ ਤੌਰ \'ਤੇ ਡਾਊਨਲੋਡ ਅਤੇ ਸਥਾਪਤ ਹੋ ਜਾਵੇਗੀ"</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"ਕਿਓਸਕ ਐਪ ਇਸ ਵਰਤੋਂਕਾਰ ਲਈ ਸਥਾਪਤ ਕੀਤੀ ਜਾਵੇਗੀ"</string>
-    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"ਤੁਹਾਡੇ ਵੱਲੋਂ ਕੋਈ ਭੁਗਤਾਨ ਖੁੰਝਾ ਦੇਣ \'ਤੇ, <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ਇਸ ਡੀਵਾਈਸ ਨੂੰ ਪ੍ਰਤਿਬੰਧਿਤ ਕਰ ਸਕਦਾ ਹੈ"</string>
+    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"ਤੁਹਾਡੇ ਵੱਲੋਂ ਕੋਈ ਭੁਗਤਾਨ ਨਾ ਕਰਨ \'ਤੇ, <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ਇਸ ਡੀਵਾਈਸ ਨੂੰ ਪ੍ਰਤਿਬੰਧਿਤ ਕਰ ਸਕਦਾ ਹੈ"</string>
     <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"ਤੁਹਾਡੇ ਵੱਲੋਂ ਲੋੜੀਂਦੇ ਭੁਗਤਾਨ ਨਾ ਕਰਨ \'ਤੇ, <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ਇਸ ਡੀਵਾਈਸ ਨੂੰ ਪ੍ਰਤਿਬੰਧਿਤ ਕਰ ਸਕਦਾ ਹੈ। ਵੇਰਵਿਆਂ ਲਈ, <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>ਨਿਯਮ ਅਤੇ ਸ਼ਰਤਾਂ<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g> ਦੇਖੋ।"</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"ਮਾਲਕ ਵੱਲੋਂ ਭੁਗਤਾਨ ਨਾ ਕਰਨ \'ਤੇ, <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ਇਸ ਡੀਵਾਈਸ ਨੂੰ ਪ੍ਰਤਿਬੰਧਿਤ ਕਰ ਸਕਦਾ ਹੈ"</string>
     <string name="previous" msgid="5241891780917802570">"ਪਿੱਛੇ"</string>
