--- a/DeviceLockController/res/values-pl/strings.xml
+++ b/DeviceLockController/res/values-pl/strings.xml
@@ -30,16 +30,16 @@
     <string name="setup_error_title_text" msgid="1123742279081942535">"Nie udało się otworzyć aplikacji <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
     <string name="try_again" msgid="5964839819170927721">"Spróbuj ponownie"</string>
     <string name="reset_phone" msgid="1161657350311160627">"Resetuj telefon"</string>
-    <string name="control_section_title" msgid="2213476068991045785">"Co mogę zrobić w aplikacji <xliff:g id="CREDITOR_APP">%1$s</xliff:g>?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"Jeśli nie dokonujesz płatności, zablokuj urządzenie"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"Pobierz, zainstaluj i zaktualizuj aplikację <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"Wyłącz funkcje debugowania"</string>
+    <string name="control_section_title" msgid="2213476068991045785">"Co <xliff:g id="CREDITOR_APP">%1$s</xliff:g> może zrobić?"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"Zablokować urządzenie, jeśli nie uregulujesz płatności"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"Pobrać, zainstalować i zaktualizować aplikację <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"Wyłączyć funkcje debugowania"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"Co działa po zablokowaniu urządzenia?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"Połączenia alarmowe"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Połączenia przychodzące i niektóre połączenia wychodzące"</string>
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"Ustawienia"</string>
     <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;Tworzenie kopii zapasowej lub przywracanie danych&lt;/a&gt;"</string>
-    <string name="exposure_section_title" msgid="2329122144337528752">"Co jest widoczne dla aplikacji <xliff:g id="CREDITOR_APP">%1$s</xliff:g>?"</string>
+    <string name="exposure_section_title" msgid="2329122144337528752">"Co widzi <xliff:g id="CREDITOR_APP">%1$s</xliff:g>?"</string>
     <string name="exposure_install_text" msgid="2631074166447765453">"Kiedy aplikacja <xliff:g id="CREDITOR_APP">%1$s</xliff:g> jest zainstalowana lub odinstalowana"</string>
     <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"Wszystkie prośby o zablokowanie i odblokowanie z aplikacji <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
     <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"Jeśli aplikacja <xliff:g id="CREDITOR_APP">%1$s</xliff:g> nie jest dostępna"</string>
@@ -54,7 +54,7 @@
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> może zablokować to urządzenie, jeśli właściciel nie dokona płatności"</string>
     <string name="previous" msgid="5241891780917802570">"Wstecz"</string>
     <string name="next" msgid="8248291863254324326">"Dalej"</string>
-    <string name="start" msgid="2842214844667658537">"Od"</string>
+    <string name="start" msgid="2842214844667658537">"Zarejestruj"</string>
     <string name="ok" msgid="3568398726528719749">"OK"</string>
     <string name="done" msgid="4507782734740410307">"Gotowe"</string>
     <string name="do_it_in_one_hour" msgid="2727777340568739453">"Zrób to za 1 godzinę"</string>
@@ -62,7 +62,7 @@
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Informacje finansowe"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Zarejestruj swoje urządzenie"</string>
     <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Możesz teraz zarejestrować swoje urządzenie w programie finansowania <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
-    <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Możesz teraz zarejestrować swoje urządzenie w programie dotacji <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Możesz teraz zarejestrować swoje urządzenie w programie dopłat <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Korzystasz z programu dopłat <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Rejestrowanie urządzenia"</string>
     <string name="device_financing_enrollment_body_text" msgid="5506086383249511498">"Twoje urządzenie zostanie zarejestrowane w programie finansowania <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> w ciągu 30 dni."</string>
