--- a/DeviceLockController/res/values-ru/strings.xml
+++ b/DeviceLockController/res/values-ru/strings.xml
@@ -21,7 +21,7 @@
     <string name="next_button" msgid="1856423430963548653">"Далее"</string>
     <string name="reset_button" msgid="4649354411129240809">"Сбросить"</string>
     <string name="setup_more_button" msgid="4456370972302510109">"Ещё"</string>
-    <string name="setup_info_title_text" msgid="299562193092219293">"Как приложение \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\" может управлять этим устройством"</string>
+    <string name="setup_info_title_text" msgid="299562193092219293">"Как кредитор \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\" может управлять этим устройством"</string>
     <string name="setup_failed_title_text" msgid="9045111389981992536">"Не удалось установить приложение \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\""</string>
     <string name="setup_failed_reset_device_text" msgid="178419033440060908">"Параметры устройства будут сброшены, чтобы повторить попытку."</string>
     <string name="setup_failed_reset_device_timer_text" msgid="5270970227714985986">"{count,plural, =1{Сбросьте параметры и снова настройте устройство. Через 1 секунду сброс произойдет автоматически.}one{Сбросьте параметры и снова настройте устройство. Через # секунду сброс произойдет автоматически.}few{Сбросьте параметры и снова настройте устройство. Через # секунды сброс произойдет автоматически.}many{Сбросьте параметры и снова настройте устройство. Через # секунд сброс произойдет автоматически.}other{Сбросьте параметры и снова настройте устройство. Через # секунды сброс произойдет автоматически.}}"</string>
@@ -30,16 +30,16 @@
     <string name="setup_error_title_text" msgid="1123742279081942535">"Не удается открыть приложение \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\"."</string>
     <string name="try_again" msgid="5964839819170927721">"Повторить попытку"</string>
     <string name="reset_phone" msgid="1161657350311160627">"Сбросить настройки телефона"</string>
-    <string name="control_section_title" msgid="2213476068991045785">"Возможности приложения \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\""</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"Ограничение работы устройства, если платеж не выполнен."</string>
-    <string name="control_download_text" msgid="8514650561843088172">"Скачивание, установка и обновление приложения \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\"."</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"Отключение функций отладки."</string>
+    <string name="control_section_title" msgid="2213476068991045785">"Что может делать кредитор \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\""</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"Ограничивать работу устройства, если платеж не выполнен."</string>
+    <string name="control_download_text" msgid="8514650561843088172">"Скачивать, устанавливать и обновлять приложение \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\"."</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"Отключать функции отладки."</string>
     <string name="locked_section_title" msgid="2748725389334076510">"Какие функции устройства доступны после его блокировки"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"Экстренные вызовы."</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Входящие и некоторые исходящие вызовы."</string>
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"Настройки."</string>
     <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;Резервное копирование и восстановление&lt;/a&gt; ваших данных."</string>
-    <string name="exposure_section_title" msgid="2329122144337528752">"Какая информация доступна приложению \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\""</string>
+    <string name="exposure_section_title" msgid="2329122144337528752">"Какая информация доступна кредитору \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\""</string>
     <string name="exposure_install_text" msgid="2631074166447765453">"Сведения о том, установлено ли приложение \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\"."</string>
     <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"Запросы на блокировку и разблокировку от приложения \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\"."</string>
     <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"Данные о том, что приложение \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\" недоступно на устройстве."</string>
@@ -50,7 +50,7 @@
     <string name="download_kiosk_app" msgid="1845089944897502656">"Киоск-приложение будет скачано и установлено автоматически."</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"Для пользователя будет установлено киоск-приложение."</string>
     <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"Кредитор \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\" может ограничить работу устройства, если вы пропустите платеж."</string>
-    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"Если вы не совершаете необходимые выплаты, кредитор \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\" может ограничить работу устройства. Подробные сведения представлены в <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>Условиях использования<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>."</string>
+    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"Если вы не будете совершать необходимые выплаты, кредитор \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\" может ограничить работу устройства. Подробные сведения представлены в <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>Условиях использования<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>."</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"Кредитор \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\" может ограничить работу устройства, если его владелец не вносит платежи."</string>
     <string name="previous" msgid="5241891780917802570">"Назад"</string>
     <string name="next" msgid="8248291863254324326">"Далее"</string>
@@ -70,7 +70,7 @@
     <string name="device_enrollment_notification_body_text" msgid="8755080244956655854">"Регистрация возобновится в <xliff:g id="TIME">%1$s</xliff:g>. Вы можете продолжать пользоваться устройством."</string>
     <string name="continue_using_device" msgid="5816570734692191190">"Можно дальше пользоваться устройством."</string>
     <string name="device_paid" msgid="6606280698381856804">"Вы оплатили устройство"</string>
-    <string name="device_removed_from_subsidy_program" msgid="1243434945619071051">"Устройство удалено из программы субсидирования кредитора \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\""</string>
+    <string name="device_removed_from_subsidy_program" msgid="1243434945619071051">"Устройство удалено из программы субсидирования компании \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\""</string>
     <string name="device_removed_from_finance_program" msgid="825548999540107578">"Устройство удалено из программы финансирования кредитора \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\"."</string>
     <string name="restrictions_lifted" msgid="5785586265984319396">"Все ограничения на работу устройства сняты."</string>
     <string name="uninstall_kiosk_app" msgid="3459557395024053988">"Теперь вы можете удалить киоск-приложение."</string>
