--- a/DeviceLockController/res/values-sr/strings.xml
+++ b/DeviceLockController/res/values-sr/strings.xml
@@ -18,7 +18,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name" msgid="5655878067457216814">"DeviceLockController"</string>
-    <string name="next_button" msgid="1856423430963548653">"Следеће"</string>
+    <string name="next_button" msgid="1856423430963548653">"Даље"</string>
     <string name="reset_button" msgid="4649354411129240809">"Ресетуј"</string>
     <string name="setup_more_button" msgid="4456370972302510109">"Још"</string>
     <string name="setup_info_title_text" msgid="299562193092219293">"Како <xliff:g id="CREDITOR_APP">%1$s</xliff:g> може да управља овим уређајем"</string>
@@ -39,7 +39,7 @@
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Долазни и неки одлазни позиви"</string>
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"Подешавања"</string>
     <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;Копије&lt;/a&gt;"</string>
-    <string name="exposure_section_title" msgid="2329122144337528752">"Шта је видљиво за: <xliff:g id="CREDITOR_APP">%1$s</xliff:g>?"</string>
+    <string name="exposure_section_title" msgid="2329122144337528752">"Шта је видљиво апликацији <xliff:g id="CREDITOR_APP">%1$s</xliff:g>?"</string>
     <string name="exposure_install_text" msgid="2631074166447765453">"Када се апликација <xliff:g id="CREDITOR_APP">%1$s</xliff:g> инсталира или деинсталира"</string>
     <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"Сви захтеви за закључавање и откључавање које шаље <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
     <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"Ако апликација <xliff:g id="CREDITOR_APP">%1$s</xliff:g> није доступна"</string>
@@ -53,7 +53,7 @@
     <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> може да ограничи овај уређај ако не извршите неопходна плаћања. Детаље потражите у <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>условима и одредбама<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>."</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> може да ограничи овај уређај ако власник не изврши плаћања"</string>
     <string name="previous" msgid="5241891780917802570">"Претходно"</string>
-    <string name="next" msgid="8248291863254324326">"Следеће"</string>
+    <string name="next" msgid="8248291863254324326">"Даље"</string>
     <string name="start" msgid="2842214844667658537">"Покрени"</string>
     <string name="ok" msgid="3568398726528719749">"Важи"</string>
     <string name="done" msgid="4507782734740410307">"Готово"</string>
